# samet_tamplate

./: justfile  pyproject.toml
